Version 1.0RC? (?? ??? ??)
  - Fixed PHP warnings about undefined variable PHP_SELF in all the
    include files.
  - Rewrote reading of config.php to manually split lines rather than
    relying on fgets() which does not seem to be reliable.
    Also try opening "includes/settings.php" if "settings.php" fails.
  - XHTML fix for day.php mini-cal. Missing <tr>
  - Fixed bug 1116008: Got "invalid user" error when clicking on '+' icon
    to add new event
Version 1.0RC1 (04 Feb 2005)
  - Fixed Bug 1088857: sql statement was using != vs <> and failing
    with db2 7.1/odbc affected file view_entry.php
  - Declare $HTTP_POST_VARS and $HTTP_GET_VARS as global in getPostValue
    and getGetValue (functions.php) since they are not auto-global.
  - Recommitted recent files in UNIX format vs DOS. My bad RJ
  - Fixed Bug 986774:Editing Category for and event as Assistant
  - Updated several files to replace <? with <?php
    which causes problems on Windows
  - Fixed Bug 931096: Restrict views and view edits to owner of that view. Added some
    error notices to database calls 
    affected files view_v.php, view_d.php, view_w.php, view_t.php, view_m.php, views_edit.php
  - Fixed Bug 1101823: Problem importing palm desktop datebook.dat file
  - Security fix: Fixed protential problem if a user attempts to login
    with a username that has charaters that will affect the database.
  - Second pass at Bug Fix 1109141: Added empty and "none" testing of
    language pref
  - Changed encode/decode functions used in generating session cookies
    to use md5 of install_password rather than various server variables.
    (Hoping this may help with IE login problems...)
  - Fixed Bug 1109141: Notification language is the senders, not the recipients
    affected files edit_entry.php, del_entry.php, reject_entry.php
  - Fixed Bug 1109323: Error in LDAP get_admins function
  - Patch 1113315: Change maxsize of username from 20 to 25 in
    admin add user form (db was already 25)